Added action to swagger.
